--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -34,6 +34,11 @@
                         <a href="{% url 'archive_sprint_backlog' sprint.id %}" class="btn btn-success">Archive Sprint</a>
                     </td>
                 </tr>
+                {% empty %}
+                <!-- If no sprints are available -->
+                <tr id="task-row-empty">
+                    <td colspan="6" class="text-center">No sprints available.</td>
+                </tr>
                 {% endfor %}
             </tbody>
         </table>
