--- a/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
@@ -30,6 +30,11 @@
                 <td>{{sprint.end_date}}</td>
 
             </tr>
+            {% empty %}
+            <!-- If no sprints are available -->
+            <tr id="task-row-empty">
+                <td colspan="6" class="text-center">No sprints available.</td>
+            </tr>
             {% endfor %}
         </tbody>
     </table>
